added more project files

--- a/3_music_library_database_app/views/all_albums.erb
+++ b/3_music_library_database_app/views/all_albums.erb
@@ -4,9 +4,7 @@
   <body>
     <h1>Albums</h1>
     <% @albums.each do |record| %>
-    <div>
-    <a href="/albums/<%= record.id %>"> Title: <%= record.title %> Release year: <%= record.release_year %> </a>
-    </div>
+    <a href="/albums/<%= record.id %>"><%= record.title %><br /></a><br />
     <% end %>
   </body>
 </html>
