--- a/3_music_library_database_app/views/album.erb
+++ b/3_music_library_database_app/views/album.erb
@@ -4,7 +4,7 @@
   <body>
     <h1><%= @album.title %></h1>
     <p>
-      Release year: <%= @album.release_year %>
+      Release year: <%= @album.release_year %><br />
       Artist: <%= @artist.name %>
     </p>
   </body>
